# gnome-books

./: .gitlab-ci.yml  NEWS  README  README.md  gnome-books.doap  meson.build  meson_options.txt  meson_post_install.py
data/: meson.build  org.gnome.Books.appdata.xml.in  org.gnome.Books.data.gresource.xml  org.gnome.books.gschema.xml
data/icons/: meson.build
flatpak/: org.gnome.Books.json
man/: gnome-books.xml  meson.build
po/: LINGUAS  POTFILES.in  ca.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  (+7 more)
src/: Makefile-lib.am  application.js  config.js.in  documents.js  embed.js  epubview.js  evinceview.js  main.js  mainToolbar.js  meson.build  notifications.js  org.gnome.Books.in  org.gnome.Books.src.gresource.xml  overview.js  preview.js  query.js  search.js  selections.js  trackerController.js  trackerUtils.js  windowMode.js
src/lib/: gd-nav-bar.c  gd-utils.c  gd-utils.h
